# TP_8INF919

./: devoir_2.ipynb  devoir_2.py  devoir_2_1.py  devoir_2_2.py  entrainement_distribue_GPU_avec_keras_RNP_mnist.ipynb  job-spark.sh  ml_tree.ipynb  ml_tree_out_800_4.csv  mltree.py  mltree_cluster.py  mltree_cluster_2.py  mltree_local.py  plot.py  pyproject.toml  spark_comp.ipynb
Devoir_1/: job-spark.sh  ml_tree.ipynb  mltree.py  mltree_cluster.py  plot.py  spark_comp.ipynb
FAURE_FAUB20060100/: job-spark.sh  mltree_local.ipynb  pyproject.toml
