[tool.poetry]
name = "tp-8inf919"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "~2.3"
pyspark = "^3.5.0"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.5"
protobuf = "~3.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"