[tool.poetry]
name = "tp-8inf919"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.1"
pyspark = "^3.5.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
